-firebase realtime db eklendi, -sonuca göre sonuç aktivitesinde farklı resim çıkıyor, -bazı telefonlarda açıldığında büyük harfle başlaması durumunun oyun temposunu yavaşlatması sıkıntısı giderildi, -kelime tahmin edilince doğruysa yazılan siliniyor, -bilinemeyen kelime sonuç ekranında görünüyor, -doğru olmayan harfler ekranda gösteriliyor, -splash screen, icon eklendi.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AdamAsmacaOyunu">
         <activity
+            android:name=".SplashScreenActivity"
+            android:exported="true"
+
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>/>
+        </activity>
+
+        <activity
             android:name=".SonucActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
