--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.adamasmacaoyunu">
+    package="com.example.adamasmacaoyunu"
+    >
+    <uses-permission android:name="android.permission.VIBRATE"/>
+
 
     <application
         android:allowBackup="true"
@@ -9,13 +12,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AdamAsmacaOyunu">
-        <activity
-            android:name=".SplashScreenActivity"
-            android:exported="true"
-
-            >
-
-        </activity>
 
         <activity
             android:name=".SonucActivity"
@@ -30,6 +26,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>/>
         </activity>
+
+
     </application>
 
 </manifest>
